hphp/test/slow/closure/bind-private.php.expectf
Fatal error: Call to private method Bar::instanceDo() from context 'Foo' in %s/test/slow/closure/bind-private.php on line 8
